<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/viewFlipper">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/t5_page1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/t5p1Inst2"
                android:id="@+id/t5p1Inst2"
                android:layout_marginTop="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t5p1Inst3"
                android:id="@+id/t5p1Instr3"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/t5p1Inst2"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/good_luck"
                android:id="@+id/t5p1GoodLuck"
                android:layout_below="@+id/t5p1Instr3"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/t5_page2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/t5p2Inst5"
                android:id="@+id/t5p2firstLabel"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t5p2Inst2"
                android:id="@+id/t5p2Inst2"
                android:textColor="#ffe31037"
                android:layout_below="@+id/t5p2firstLabel"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/t5_page3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/feedback"
                android:id="@+id/t5p3fbLabel"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp" />

            <compasssounds.compasssounds.CompassFeedbackView
                android:id="@+id/t5p3feedbackView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_above="@+id/t5_seekBar"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/t5p3Inst1"
                android:id="@+id/t5p3Inst5"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="30dp" />

            <SeekBar
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/t5_seekBar"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:max="380"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Done"
                android:id="@+id/t5_button_done"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="62dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/t5_page4">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/t5p4Inst5"
                android:id="@+id/t5p4secondLabel"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <Button
                style="@style/btnStyleBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go"
                android:id="@+id/t5p4_button"
                android:layout_below="@+id/t5p4trialsLeft"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="15 trials left"
                android:id="@+id/t5p4trialsLeft"
                android:layout_below="@+id/t5p4secondLabel"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t5p1Intro"
                android:id="@+id/textView20"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>


        </RelativeLayout>


    </ViewFlipper>

</LinearLayout>